--- a/cruise_server/pom.xml
+++ b/cruise_server/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.boketto</groupId>
+        <artifactId>cruise_parent</artifactId>
+        <version>0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
     <groupId>org.boketto</groupId>
     <artifactId>cruise_server</artifactId>
     <version>0.1-SNAPSHOT</version>
